# crates-lsp

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yaml  tag.yaml
src/: check.rs  detect.rs  main.rs  parse.rs  registry.rs  settings.rs  sparse.rs
src/crates/: api.rs  cache.rs  mod.rs  registry.rs  sparse.rs
src/registry/: api.rs  mod.rs
test/: Cargo.toml
