[package]
name = "crates-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["rt", "macros", "io-std"] }
tower-lsp = "0.20.0"
async-trait = "0.1"

semver = { version = "1", features = ["serde"] }
hyper = { version = "1.2.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.3", features = ["client", "client-legacy", "http1"] }
http-body-util = "0.1.0"
hyper-rustls = { version = "0.26.0", default-features = false, features = ["webpki-roots", "http1", "webpki-tokio", "ring"] }
serde_json = "1.0.104"
serde = { version = "1.0.180", features = ["derive"] }
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }

[dev-dependencies]
indoc = "2"
