[package]
name = "crates-lsp"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["rt", "macros", "io-std"] }
tower-lsp = "0.20.0"
async-trait = "0.1"

semver = { version = "1", features = ["serde"] }
serde_json = "1.0.104"
serde = { version = "1.0.180", features = ["derive"] }
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
reqwest = { version = "=0.12.5", features = ["json", "socks"] }

[dev-dependencies]
indoc = "2"
